--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@
   line-height: 1.05;
   letter-spacing: -0.02em;
   color: #fff;
-  margin: 0 0 clamp(4px, 0.8vw, 8px);
+  margin: 0 0 clamp(4px, 0.8vw, 20px);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -70,12 +70,12 @@
   width: 35%;
   max-width: max-content;
   min-height: max-content;
-  background: rgba(255, 255, 255, 0.9);
+  background: white;
   box-shadow: var(--shadow-sm);
   z-index: 2;
   display: flex;
   align-items: center; 
-  justify-content: flex-end;
+  justify-content: center;
   padding: 28px 80px; 
 }
 
@@ -97,7 +97,7 @@
 
 .nav-item {
   position: relative;
-  font-weight: 500;
+  font-weight: 400;
   font-size: clamp(14px, 1.6vw, 20px);
   color: #000;
   cursor: pointer;
@@ -117,11 +117,11 @@
   position: absolute;
   top: calc(100% + 14px);
   left: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.25);
   color: #fff;
   list-style: none;
   margin: 0;
-  padding: 12px;
+  padding: 12px; 
   display: flex;
   flex-direction: column;
   gap: 8px;
