/pages to pages

--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -23,28 +23,28 @@
       <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
         소개
         <ul class="nav-sub" role="menu" aria-label="소개 하위 메뉴">
-          <li role="menuitem"><a href="/pages/소개/공간소개.html">공간 소개</a></li>
-          <li role="menuitem"><a href="/pages/소개/수목원지도.html">수목원 지도</a></li>
-          <li role="menuitem"><a href="/pages/소개/둘러보기.html">둘러보기</a></li>
+          <li role="menuitem"><a href="pages/소개/공간소개.html">공간 소개</a></li>
+          <li role="menuitem"><a href="pages/소개/수목원지도.html">수목원 지도</a></li>
+          <li role="menuitem"><a href="pages/소개/둘러보기.html">둘러보기</a></li>
         </ul>
       </li>
       <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
         방문
         <ul class="nav-sub" role="menu" aria-label="방문 하위 메뉴">
-          <li role="menuitem"><a href="/pages/방문/이용안내.html">이용 안내</a></li>
-          <li role="menuitem"><a href="/pages/방문/오시는길.html">오시는 길</a></li>
-          <li role="menuitem"><a href="/pages/방문/단체문의.html">단체 문의</a></li>
+          <li role="menuitem"><a href="pages/방문/이용안내.html">이용 안내</a></li>
+          <li role="menuitem"><a href="pages/방문/오시는길.html">오시는 길</a></li>
+          <li role="menuitem"><a href="pages/방문/단체문의.html">단체 문의</a></li>
         </ul>
       </li>
       <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
         프로그램
         <ul class="nav-sub" role="menu" aria-label="프로그램 하위 메뉴">
-          <li role="menuitem"><a href="/pages/프로그램/산책명상.html">산책명상</a></li>
-          <li role="menuitem"><a href="/pages/프로그램/명상.html">명상</a></li>
-          <li role="menuitem"><a href="/pages/프로그램/원예.html">원예</a></li>
+          <li role="menuitem"><a href="pages/프로그램/산책명상.html">산책명상</a></li>
+          <li role="menuitem"><a href="pages/프로그램/명상.html">명상</a></li>
+          <li role="menuitem"><a href="pages/프로그램/원예.html">원예</a></li>
         </ul>
       </li>
-      <li class="nav-item" tabindex="0"><a href="/pages/shop.html">Shop</a></li>
+      <li class="nav-item" tabindex="0"><a href="pages/shop.html">Shop</a></li>
     </ul>
   </nav>
 </div>
