site title fix 2

--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -14,10 +14,8 @@
 
 <!-- Top bar -->
 <div class="site-header-bar">
-  <div class="site-title-container">
-    <h1 class="site-title">加 時 林</h1>
-    <h2 class="site-subtitle">치유의 정원</h2>
-  </div>
+  <h1 class="site-title left">加 時 林</h1>
+  <h2 class="site-subtitle left">치유의 정원</h2>
   <nav class="navbar transparent" role="navigation" aria-label="Main navigation">
     <ul id="main-menu" class="nav-main">
       <li class="nav-item" tabindex="0" aria-haspopup="true" aria-expanded="false">
