--- a/partials/header-site.html
+++ b/partials/header-site.html
@@ -42,7 +42,7 @@
     </ul>
   </nav>
 </header>
-<a class="brand-title" href="/">加 時 林 | 치유의 정원</a>
+<a class="brand-title" href="/gasirim.github.io/">加 時 林 | 치유의 정원</a>
 <section class="hero-slideshow">
   <div class="embla">
     <div class="embla__viewport">
