--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -48,7 +48,7 @@
     <div class="embla__viewport">
       <div class="embla__container">
         <div class="embla__slide">
-          <img src="https://images.unsplash.com/photo-1756908604030-04861dc79820?q=80&amp;w=2071&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.1.0&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Nature landscape placeholder">
+          <img src="assets/img/main.jpg" alt="Nature landscape placeholder">
           <div class="embla__overlay">
             <h1>Placeholder title</h1>
             <p>Placeholder subtitle</p>
