Add Embla autoplay plugin

--- a/partials/header-landing.html
+++ b/partials/header-landing.html
@@ -88,3 +88,4 @@
   </div>
 </section>
 <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js" defer></script>
+  <script src="https://unpkg.com/embla-carousel-autoplay/embla-carousel-autoplay.umd.js" defer></script>
